Add a button in take-attendance page to go back to events page.

--- a/take-attendance.html
+++ b/take-attendance.html
@@ -17,6 +17,8 @@
     <h1>Take Attendance</h1>
     <p id="event-name"></p>
 
+    <a href="events.html" class="back-button">Back to Events Page</a>
+
     <div class="segmented-control">
       <button
         class="segmented-control-button"
