Add Main Gate Entry/Exit support.

--- a/events.html
+++ b/events.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="styles/events.css" />
 </head>
 <body onload="getOfficialEvents()">
-    <h1>Choose Event to take Attendance</h1>
+    <div>
+        <h1>Choose Event to take Attendance</h1>
+        <a href="index.html" class="logout-button">Logout</a>
+    </div>
 
     <input type="text" class="search-bar" placeholder="Search for events..." onkeyup="searchEvents()">
 
